--- a/src/UI/Views/Account/Login.cshtml
+++ b/src/UI/Views/Account/Login.cshtml
@@ -6,18 +6,20 @@
 
 @using (Html.BeginForm("Login", "Account", FormMethod.Post))
 {
+<div class="container">
+    <div>
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <h3 id="name">Login</h3>
+        <input
+          placeholder="enter the email"
+          class="centered-element"
+          asp-for="Email" />
+      </div>
+      <div>
+        <h3 id="password_text">Password</h3>
+        <input asp-for="Password" placeholder="enter the password" type="password" id="password" />
+      </div>
+      <button class="button-login">Submit</button>
+</div>
 
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-field">
-        <label asp-for="Email" class="form-label"></label>
-        <input asp-for="Email" class="form-control" aria-describedby="emailHelp">
-    </div>
-    <div class="form-field">
-        <label asp-for="Password" class="form-label"></label>
-        <input asp-for="Password" class="form-control">
-        <a asp-action="SendResetPasswordRequist" asp-controller="Account">Reset password</a>
-    </div>
-    <div class="form-field">
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </div>
 }
