--- a/src/UI/Views/Account/Registration.cshtml
+++ b/src/UI/Views/Account/Registration.cshtml
@@ -5,21 +5,23 @@
 
 @using (Html.BeginForm("Registration", "Account", FormMethod.Post))
 {
-
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-field">
-        <label asp-for="Email" class="form-label"></label>
-        <input asp-for="Email" class="form-control" aria-describedby="emailHelp" />
+<div class="container">
+    <div>
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <h3 id="name">Login</h3>
+        <input
+          placeholder="enter the email"
+          class="centered-element"
+          asp-for="Email" />
     </div>
-    <div class="form-field">
-        <label asp-for="Password" class="form-label"></label>
-        <input asp-for="Password" class="form-control" aria-describedby="passwordHelp" />
+    <div>
+        <h3 id="password_text">Password</h3>
+        <input asp-for="Password" placeholder="enter the password" id="password" />
     </div>
-    <div class="form-field">
-        <label asp-for="PasswordConfirm" class="form-label"></label>
-        <input asp-for="PasswordConfirm" class="form-control" />
+    <div>
+        <h3 id="password_text_confirm">Password confirm</h3>
+        <input asp-for="PasswordConfirm" placeholder="enter the password confirm" id="password_confirm" />
     </div>
-    <div class="form-field">
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </div>
+    <button class="button-login">Submit</button>
+</div>
 }
