--- a/src/UI/Views/ImprovingData/ViewList.cshtml
+++ b/src/UI/Views/ImprovingData/ViewList.cshtml
@@ -2,15 +2,23 @@
 @{
 }
 <div class="row">
-    @foreach (var item in Model)
+    @if (Model is null)
     {
-        <div class="card form-field" style="width: 24rem;  ">
-            <div class="card-body">
-                <h5 class="card-title">@item.Title</h5>
-                <p class="card-text">Description:@item.Description</p>
-                <p class="card-text">Author:@item.Author.Email</p>
-                <a href="@Url.Action("ViewImprovingData", "ImprovingData", new {Id = item.Id})" class="btn btn-primary">View</a>
-            </div>
-        </div>
+        <h3 style="align-content:center">List is empty</h3>
     }
+    else
+    {
+        @foreach (var item in Model)
+        {
+            <div class="card form-field" style="width: 24rem;  ">
+                <div class="card-body">
+                    <h5 class="card-title">@item.Title</h5>
+                    <p class="card-text">Description:@item.Description</p>
+                    <p class="card-text">Author:@item.Author.Email</p>
+                    <a href="@Url.Action("ViewImprovingData", "ImprovingData", new {Id = item.Id})" class="btn btn-primary">View</a>
+                </div>
+            </div>
+        }    
+    }
+    
 </div>
