--- a/src/UI/Views/Shared/_Layout.cshtml
+++ b/src/UI/Views/Shared/_Layout.cshtml
@@ -4,6 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link href="~/css/login.css" rel="stylesheet" type="text/css"  />
+    <link href="~/css/Profile.css" rel="stylesheet" type="text/css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
@@ -24,14 +27,8 @@
                         }
                         else if (User.IsInRole("Admin") || User.IsInRole("Manager"))
                         {
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Improving data panel
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" asp-controller="AccountControl" asp-action="">-----</a></li>
-                                    <li><a class="dropdown-item" asp-controller="AccountControl" asp-action="">-----</a></li>
-                                </ul>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-action="AccountPanel" asp-controller="Account">Account panel</a>
                             </li>
                         }
                         @if (User.Identity.IsAuthenticated)
@@ -56,7 +53,7 @@
                                     Tests panel
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" asp-controller="Test" asp-action="AddNewImprovingData">Add new test</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Test" asp-action="AddNewTest">Add new test</a></li>
                                     <li><a class="dropdown-item" asp-controller="Test" asp-action="ViewList">View tests</a></li>
                                 </ul>
                             </li>
@@ -95,6 +92,36 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Information</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script>
+        function ChangingMode() {
+            var view = document.getElementById("ViewOfItem");
+            var update = document.getElementById("UpdateItem");
+            if (view.style.display === "none") {
+                view.style.display = "block";
+                update.style.display = "none"
+            } else {
+                view.style.display = "none";
+                update.style.display = "block"
+            }
+        }
+    </script>
+    <script src="~/js/Modal.js"></script>
+    <script scr="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
