--- a/src/UI/Views/Account/Profile.cshtml
+++ b/src/UI/Views/Account/Profile.cshtml
@@ -38,7 +38,7 @@
                                     {
                                         foreach (var item in Model.Test)
                                         {
-                                            @item.Name @space
+                                            @item.Title @space
                                         }                                        
                                     }                                    
                                     else
