--- a/src/UI/Views/ImprovingData/ViewList.cshtml
+++ b/src/UI/Views/ImprovingData/ViewList.cshtml
@@ -4,7 +4,7 @@
 <div class="row">
     @if (Model is null)
     {
-        <h3 style="align-content:center">List is empty</h3>
+        <h3 style="text-align:center">List is empty</h3>
     }
     else
     {
