--- a/src/UI/Views/Test/AddNewTest.cshtml
+++ b/src/UI/Views/Test/AddNewTest.cshtml
@@ -1,3 +1,22 @@
 ﻿@model Domain.ViewModels.Test.AddNewTestViewModel
 @{
 }
+@using (Html.BeginForm("AddNewTest", "Test", FormMethod.Post))
+{
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-field">
+        <label asp-for="Title"></label>
+        <input asp-for="Title" class="form-control" placeholder="Enter test of program" required>
+    </div>
+    <div class="form-field">
+        <label asp-for="Description"></label>
+        <input asp-for="Description" class="form-control" placeholder="Enter description of test">
+    </div>
+    <div class="form-field">
+        <label asp-for="TimePassing"></label>
+        <input asp-for="TimePassing" type="time" class="form-control" required>
+    </div>
+    <div class="form-field">
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+}
