--- a/src/UI/Views/Test/AddNewQuestion.cshtml
+++ b/src/UI/Views/Test/AddNewQuestion.cshtml
@@ -8,14 +8,14 @@
             <label asp-for="QuestionText">Question text</label>
             <input asp-for="QuestionText" class="form-control" required>
         </div>
-        @for(int i = 0; i < Model.Parameters.CountOfAnswer; i++)
+        @for(int i = 1; i <= Model.Parameters.CountOfAnswer; i++)
         {
             <div class="form-field">
                 <label asp-for="Answers">Answer #@i</label>
                 <input asp-for="Answers" class="form-control">
             </div>
             <div class="form-check">
-            <input class="form-check-input" type="radio" value="@i" asp-for="AnswersPowerHtml" >
+                <input class="form-check-input" type="radio" value="@i" asp-for="AnswersPowerHtml" >
             </div>
         }
         <div class="form-field">
