--- a/src/UI/Views/Test/ContWindowResult.cshtml
+++ b/src/UI/Views/Test/ContWindowResult.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Domain.ViewModels.Test.ContWindowViewModel
 @{
 }   
-@using (Html.BeginForm("Check", "Test", FormMethod.Post))
+@using (Html.BeginForm("CheckResult", "Test", FormMethod.Post))
 {
         <div asp-validation-summary="All" class="text-danger"></div>
-        <h3 style="text-align:center">One more question</h3>
+        <h3 style="text-align:center">One more result</h3>
         <div class="form-field">
             <label asp-for="Cont">Yes</label>
             <input class="form-check-input" type="radio" value="Yes" asp-for="Cont">
