--- a/src/UI/wwwroot/css/login.css
+++ b/src/UI/wwwroot/css/login.css
@@ -1,52 +1,32 @@
 body {
-  background-image: linear-gradient(to right, #c6d4ff, #73ba9b);
-  font-size: 16px;
+    background-image: linear-gradient(to right, #c6d4ff, #73ba9b);
+    font-size: 16px;
 }
 
-#Email {
-  width: 250px;
-  height: 25px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
+.center {
+    position: relative;
+    margin-top: 250px;
+}
+
+.block {
+    text-align: center;
 }
 
 .centered-element {
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-#password {
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 250px;
-  height: 25px;
-  border-radius: 10px;
-  border: 1px solid #ccc;
+    width: 250px;
+    height: 30px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
 }
 
-#name {
-  position: absolute;
-  left: 41%;
-  top: 36%;
-}
-#password_text {
-  position: absolute;
-  left: 41%;
-  top: 46%;
-  color: black;
+.dog {
+    background-color: #c6d4ff;
+    width: 100px;
+    height: 25px;
+    border-radius: 10px;
+    border: 1px solid #73ba9b;
 }
 
-
-.button-login {
-  background-color: #c6d4ff;
-  position: absolute;
-  top: 60%;
-  left: 41%;
-  width: 15%;
-  height: 25px;
-  border-radius: 10px;
-  border: 1px solid #73ba9b;
+.plane {
+    margin-bottom: auto;
 }
